# corptools/api/character/finances.py
@@ -305,8 +305,8 @@ class FinancesApiEndpoints:
                     "acceptor": c.acceptor_name.name if c.acceptor_id else None,
                     "assignee": c.assignee_name.name if c.assignee_id else None,
                     "contract": c.contract_id,
-                    "issuer": c.issuer_name.name,
-                    "issuer_corporation_id": c.issuer_corporation_name.name,
+                    "issuer": c.issuer_name.name if c.issuer_id else None,
+                    "issuer_corporation": c.issuer_corporation_name.name if c.issuer_corporation_id else None,
                     "days_to_complete": c.days_to_complete,
                     "collateral": c.collateral or 0,
                     "buyout": c.buyout or 0,
