# corptools/models/contracts.py
@@ -143,7 +143,9 @@ class Contract(models.Model):
             days_to_complete=esi_model.days_to_complete,
             end_location_id=esi_model.end_location_id,
             for_corporation=esi_model.for_corporation,
+            issuer_corporation_id=esi_model.issuer_corporation_id,
             issuer_corporation_name_id=esi_model.issuer_corporation_id,
+            issuer_id=esi_model.issuer_id,
             issuer_name_id=esi_model.issuer_id,
             price=esi_model.price,
             reward=esi_model.reward,
@@ -286,7 +288,9 @@ class CorporateContract(models.Model):
             days_to_complete=esi_model.days_to_complete,
             end_location_id=esi_model.end_location_id,
             for_corporation=esi_model.for_corporation,
+            issuer_corporation_id=esi_model.issuer_corporation_id,
             issuer_corporation_name_id=esi_model.issuer_corporation_id,
+            issuer_id=esi_model.issuer_id,
             issuer_name_id=esi_model.issuer_id,
             price=esi_model.price,
             reward=esi_model.reward,
